[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/banana.png" type="Texture" id=1]
[ext_resource path="res://characters/items/banana.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="banana" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 12, -31.8, 12, -28.6, 30, -3.6, 30, 0, 32, 13, 32, 15, 30.7, 15, 29.6, 20, 27.9, 20, 17.7, 32, -9, 32, -9, 28.9, -6.7, 13, -5.2, 13, 0.299999, 1.2, -5.7, -15.1, -6.8, -13, -12.8, -13, -16, -16.2, -16, -22.3, -13, -31.3, -13, -32, 9.9, -32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="." to="." method="_on_banana_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_banana_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
